--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,7 +20,19 @@ jobs:
         echo "$env:SCOOP\shims" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: Check Urls
-      run: .\bin\checkurls.ps1
-
+      run: |
+        .\bin\checkurls.ps1 6> results.txt
+        $error_string = Select-String -Path results.txt -Pattern "error"
+        if ($error_string -ne $null) {
+            .\bin\checkurls.ps1
+            Exit 1
+        }
     - name: Check Versions
-      run: .\bin\checkver.ps1
+      run: |
+        .\bin\checkver.ps1 6> results.txt
+        $error_string = Select-String -Path results.txt -Pattern "scoop version is"
+        if ($error_string -ne $null) {
+            .\bin\checkver.ps1
+            Exit 1
+        }
+
